--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb+srv://Accrone:Accrone@12345@accrone.6utge.mongodb.net/carrom?retryWrites=true&w=majority
+GMAIL_ID=accroneraja@gmail.com
+GMAIL_PASS=7619224167@Job
